# djangox

./: pyproject.toml
config/: settings.py
templates/: _base.html
templates/pages/: about.html  home.html
users/migrations/: 0001_initial.py
