[tool.poetry]
name = "djangox"
version = "0.1.0"
description = ""
authors = ["Sahil Gupta <sahgu@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.7"
django-allauth = "^0.42.0"
django-crispy-forms = "^1.9.1"
django-debug-toolbar = "^2.2"
whitenoise = "^5.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
